--- a/code/index.html
+++ b/code/index.html
@@ -5,16 +5,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/png" href="./src/assets/images/puppy.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
-    <title>Puppy rescue</title>
+    <title>The Lost Bark: Quest for the lost pup</title>
   </head>
 
-
   <body id="body-id">
-    <h1>Puppy rescue 🐶</h1>
-    <h2>A puppys life depends on your choices!</h2>
+    <section class="header">
+      <div class="logo-heading-container">
+        <img class="logo" src="./src/assets/images/puppy.png" alt="Puppy icon" />
+        <div class="heading-container">
+          <h1>The Lost Bark: </h1>
+          <h2>Quest for the Lost Pup</h2>
+      </div>
+    </section>
+
+      <section class="player-interface">
+        <div class="hp-meter">
+          <p id="name-span">
+            Name:
+          </p>
+          <p>
+            Health points:
+          </p>
+          <div class="hp-container">
+            <img src="./src/assets/images/heart.png" alt="1 HP" id="hp1" class="heart"/>
+            <img src="./src/assets/images/heart.png" alt="1 HP" id="hp2" class="heart"/>
+          </div>
+        </div>
+        <div class="inventory">
+          <div class="handle"></div>
+        </div>
+      </section>
 
     <main>
       <section class="chat" id="chat"></section>
@@ -32,6 +56,7 @@
     </main>
 
     <script src="./script.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> 
   </body>
 
 </html>
